# aws-examples

./: README.md
access_cloudtrail_with_athena/: README.md  consolidated.ddl  consolidated.sql  raw_partitioned.ddl  raw_partitioned.sql  raw_unpartitioned.ddl  raw_unpartitioned.sql  single_file.ddl  single_file.sql
athena_performance_comparison/: .gitignore  README.md
aurora_data_api/: README.md  cloudformation.yml  example_notifications.json  init_database.py  lambda.py
cdk_cross_stack_references/: README.md
cloudformation/: cloudformation-ecr.yml
cloudtrail_aggregation/: README.md
cloudtrail_to_elasticsearch/: .gitignore  Makefile  Makefile.pip  Makefile.poetry  README.md  cloudformation.yml  index.py  pyproject.toml  requirements.txt
cloudtrail_to_elasticsearch/cloudtrail_to_elasticsearch/: bulk_upload.py  es_helper.py  lambda_handler.py  processor.py
cloudtrail_to_elasticsearch/src/: bulk_upload.py  es_helper.py  index.py  processor.py  s3_helper.py
cloudtrail_to_elasticsearch/tests/: test_lambda_handler.py  test_transforms.py
cloudtrail_to_elasticsearch/tests/resources/: event_with_request_parameters-transformed.json  event_with_request_parameters.json  s3_test_event.json  simple_event-transformed.json  simple_event.json
eventbridge/: README.md  clickstream_generator.py  clickstream_partitioning.yml  cloudwatch_subscription.yml  ec2_tag_check.yml  event_dispatch.yml
infrastructure-tools-comparison/: README.md
infrastructure-tools-comparison-2/: README.md
lambda/: Dockerfile
lambda_build_in_docker/: LICENSE  README.md  cloudformation.yml
(+169 files in other folders)
